--- a/BaseMogre/BaseMogre/BaseMogre.csproj
+++ b/BaseMogre/BaseMogre/BaseMogre.csproj
@@ -35,13 +35,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mogre">
-      <HintPath>..\..\..\..\..\..\MogreSDK\bin\Release\Mogre.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\MogreSDK\bin\Release\Mogre.dll</HintPath>
     </Reference>
     <Reference Include="MogreFramework">
-      <HintPath>..\..\..\..\..\..\MogreSDK\bin\Release\MogreFramework.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\MogreSDK\bin\Release\MogreFramework.dll</HintPath>
     </Reference>
     <Reference Include="MOIS">
-      <HintPath>..\..\..\..\..\..\MogreSDK\bin\Release\MOIS.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\MogreSDK\bin\Release\MOIS.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
