--- a/BaseMogre/BaseMogre/BaseMogre.csproj
+++ b/BaseMogre/BaseMogre/BaseMogre.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Batiment.cs" />
     <Compile Include="Cube.cs" />
     <Compile Include="Environnement.cs" />
+    <Compile Include="IComKnowledgeQuery.cs" />
     <Compile Include="OgreForm.cs">
       <SubType>Form</SubType>
     </Compile>
