--- a/BaseMogre/BaseMogre/BaseMogre.csproj
+++ b/BaseMogre/BaseMogre/BaseMogre.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
+    <Compile Include="Tache.cs" />
     <Compile Include="Tour.cs" />
     <EmbeddedResource Include="OgreForm.resx">
       <DependentUpon>OgreForm.cs</DependentUpon>
