--- a/BaseMogre/BaseMogre/BaseMogre.csproj
+++ b/BaseMogre/BaseMogre/BaseMogre.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
     <Compile Include="Tour.cs" />
+    <Compile Include="Variables.cs" />
     <EmbeddedResource Include="OgreForm.resx">
       <DependentUpon>OgreForm.cs</DependentUpon>
     </EmbeddedResource>
