--- a/BaseMogre/BaseMogre/BaseMogre.csproj
+++ b/BaseMogre/BaseMogre/BaseMogre.csproj
@@ -67,7 +67,6 @@
     </Compile>
     <Compile Include="Maison.cs" />
     <Compile Include="Map.cs" />
-    <Compile Include="Objet.cs" />
     <Compile Include="OgreBatisseur.cs" />
     <Compile Include="OgreOuvrier.cs" />
     <Compile Include="Ogres.cs" />
@@ -78,10 +77,10 @@
       <DependentUpon>FormParametresEnv.cs</DependentUpon>
     </Compile>
     <Compile Include="Personnage.cs" />
-    <Compile Include="Porte.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
+    <Compile Include="Structures.cs" />
     <Compile Include="Tour.cs" />
     <Compile Include="Variables.cs" />
     <EmbeddedResource Include="OgreForm.resx">
